# Agsh

./: .gitignore  README.md  config.toml  pyproject.toml  start_agno.bat  start_dash.bat
agno_backend/: app.py  config.py  middleware.py  prompt.py  tools.py  utils.py
dash_frontend/: app.py  app_c.py  configure.py  server.py
dash_frontend/assets/css/: background.css  base.css
dash_frontend/assets/js/: app_callbacks.js  globalCallbacks.js
dash_frontend/blueprint/: chat_api.py  document_api.py
dash_frontend/components/: chat_area.py  chat_header.py  chat_input.py  message_box.py
dash_frontend/utils/: auth_util.py  document_util.py  enum_domain.py  libreoffice_util.py
